sassi-macros/tests/lihaaf/compile_fail/wire_portable_field_level.stderr
error: Cacheable: field-level #[cacheable(...)] options are not supported; place cacheable options on the struct
 --> $DIR/wire_portable_field_level.rs:9:5
  |
9 |     #[cacheable(wire_portable)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error
